Form Builder App -3rd Commit -> Setup Structure

--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,15 @@ body {
   overflow-y: auto;
 }
 
+.lable-style{
+  @apply text-[14px] text-richblack-5;
+}
+
+.form-style {
+  @apply rounded-lg bg-richblack-700 p-2 text-[16px] leading-[24px] text-richblack-5 shadow-[0_1px_0_0] shadow-white/50 placeholder:text-richblack-400 focus:outline-none;
+}
+
+.form-style2 {
+  @apply w-full rounded-lg p-2 text-[1rem] border border-[gray-300] shadow-none placeholder:text-richblack-400 focus:outline-none focus:ring-0 focus:border-[#14279B];
+}
+
