--- a/src/App.css
+++ b/src/App.css
@@ -15,14 +15,36 @@ body {
   overflow-y: auto;
 }
 
-.lable-style{
+.spinner {
+  width: 56px;
+  height: 56px;
+  border-radius: 50%;
+  border: 9px solid #f1f2ff;
+  animation: spinner-bulqg1 0.8s infinite linear alternate,
+    spinner-oaa3wk 1.6s infinite linear;
+}
+
+.yellowButton {
+  @apply cursor-pointer rounded-md bg-yellow-50 px-[20px] py-[8px] font-semibold text-richblack-900;
+}
+
+.blackButton {
+  @apply cursor-pointer rounded-md bg-richblack-800 px-[20px] py-[8px] font-semibold text-richblack-5;
+}
+.lable-style {
   @apply text-[14px] text-richblack-5;
 }
-
 .form-style {
-  @apply rounded-lg bg-richblack-700 p-2 text-[16px] leading-[24px] text-richblack-5 shadow-[0_1px_0_0] shadow-white/50 placeholder:text-richblack-400 focus:outline-none;
+  @apply rounded-lg bg-richblack-700 p-3 text-[16px] leading-[24px] text-richblack-100 shadow-[0_1px_0_0] shadow-white/50 placeholder:text-richblack-400 focus:outline-none;
 }
 
+.form-styleEdit {
+  @apply rounded-lg bg-richblack-500 p-3 text-[16px] leading-[24px] text-richblack-5 font-semibold shadow-[0_1px_0_0] shadow-white/50 placeholder:text-richblack-400 focus:outline-none focus:ring-0 focus:border-[#14279B];
+}
+
+.section_heading {
+  @apply text-2xl font-bold text-richblack-5 lg:text-4xl;
+}
 .form-style2 {
   @apply w-full rounded-lg p-2 text-[1rem] border border-[gray-300] shadow-none placeholder:text-richblack-400 focus:outline-none focus:ring-0 focus:border-[#14279B];
 }
